<resources>
    <string name="app_name">scaling-pancake</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_instrumentlist">InstrumentListActivity</string>
    <string name="username_prompt">Enter Username</string>
    <string name="email_prompt">Enter Email</string>
    <string name="username_label">Username: </string>
    <string name="email_label">Email: </string>
    <string name="word_or">or</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="status">Status: </string>
    <string name="createprofile">Create Profile</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="bid">Bid</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="view_profile">View Profile</string>
    <string name="add_instruments">Add Instruments</string>
    <string name="view_instruments">View Instruments</string>
    <string name="search_instruments">Search Instruments</string>
    <string name="title_activity_add_instrument">AddInstrumentActivity</string>
    <string name="description">Description: </string>
    <string name="add_photo">Add Photo</string>
    <string name="add_audio_sample">Add Audio Sample</string>
    <string name="confirm">confirm</string>
    <string name="add">add</string>
    <string name="instrument_name">name</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_search_instruments">SearchInstrumentsActivity</string>
    <string name="title_activity_display_search_results">DisplaySearchResults</string>
    <string name="title_activity_view_instrument">ViewInstrumentActivity</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="instrument_content_desc">Image of the instrument</string>
    <string name="play_sample">Play Sample</string>
    <string name="make_bid">Make Bid</string>
    <string name="bid_again">Bid Again</string>
    <string name="new_bid_amount">New bid amount:</string>
    <string name="view_bids">View Bids</string>
    <string name="highest_bid">Current Max Bid: </string>
    <string name="delete">Delete</string>
    <string name="owner">Owner: </string>
    <string name="owner_me">Owner: Me</string>
    <string name="rate">Rate: </string>
    <string name="borrowing">You are currently borrowing this instrument.</string>
    <string name="biddednotice">You have made a bid on this instrument.</string>
    <string name="set_returned">Mark As Returned</string>
    <string name="return_instrument_as_borrower">Return instrument</string>
    <string name="borrower">Borrower: </string>
    <string name="accept_bid">Accept Bid</string>
    <string name="decline_bid">Decline Bid</string>
    <string name="bidder">Bidder: </string>
    <string name="offer">Offered Rate: </string>
    <string name="new_bid">New Bid!</string>
    <string name="instrument">Instrument: </string>
    <string name="title_activity_view_bids">ViewBidsActivity</string>
    <string name="title_activity_view_location">View Location</string>
    <string name="title_activity_record_audio">Record Audio</string>
    <string name="enter_bid_amount">Enter bid amount: </string>
    <string name="ownedmsg">You own this instrument.</string>
    <string name="title_activity_view_single_bid">ViewSingleBidActivity</string>
    <string name="title_activity_edit_instrument">EditInstrumentActivity</string>
    <string name="title_activity_view_bid">ViewBidActivity</string>
    <string name="choose_location">Specify a pickup location</string>
</resources>
