<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="2dp"
              android:layout_marginBottom="2dp"
                android:background="@drawable/grey_rounded_border">

    <TextView
        android:id="@+id/bid_list_item_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instrument"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/bid_list_item_bidder_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bidder"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>
        <!--android:clickable="true"-->
        <!--android:onClick="displayBidder"/>-->

    <TextView
        android:id="@+id/bid_list_item_rate_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offer"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <Button
        android:id="@+id/bid_list_item_accept_button"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/accept_bid"
        android:background="@drawable/btn_selector"/>

</LinearLayout>