<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cmput301w16t08.scaling_pancake.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/view_profile"
            android:id="@+id/menu_view_profile_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_instruments"
            android:id="@+id/menu_add_instruments_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/view_instruments"
            android:id="@+id/menu_view_instruments_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/search_instruments"
            android:id="@+id/menu_search_instruments_button"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/menu_back_button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
