<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/grey_rounded_border">

    <TextView
        android:id="@+id/lended_instrument_list_item_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instrument"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/lended_instrument_list_item_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/lended_instrument_list_item_borrower_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/owner"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />

    <TextView
        android:id="@+id/lended_instrument_list_item_rate_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/rate"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

</LinearLayout>