<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EditProfileActivity"
    tools:showIn="@layout/activity_edit_profile">

    <LinearLayout
        android:id="@+id/edit_profile_et_shell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_profile_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/username_prompt"
            android:background="@drawable/grey_rounded_border"/>

        <EditText
            android:id="@+id/edit_profile_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_prompt"
            android:background="@drawable/grey_rounded_border"/>

    </LinearLayout>

        <Button
            android:id="@+id/edit_profile_cancel_button"
            android:layout_alignParentBottom="true"
            android:onClick="cancel_profile_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/cancel"
            android:background="@drawable/btn_selector"/>

    <Button
        android:id="@+id/edit_profile_save_button"
        android:layout_above="@id/edit_profile_cancel_button"
        android:onClick="save_profile_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/save_changes"
        android:background="@drawable/btn_selector"/>

</RelativeLayout>
