<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cmput301w16t08.scaling_pancake.activities.ViewBidActivity"
    tools:showIn="@layout/activity_view_bid">

    <Button
        android:id="@+id/view_bid_activity_back_button"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="back"
        android:text="@string/back"
        android:background="@drawable/btn_selector"/>

    <Button
        android:id="@+id/view_bid_activity_decline_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="declineBid"
        android:text="@string/decline_bid"
        android:background="@drawable/btn_selector"/>

    <Button
        android:id="@+id/view_bid_activity_accept_button"
        android:layout_above="@id/view_bid_activity_decline_button"
        android:layout_width="match_parent"
        android:layout_height="36sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:onClick="acceptBid"
        android:text="@string/accept_bid"
        android:background="@drawable/btn_selector"/>

    <LinearLayout
        android:id="@+id/view_bid_activity_tv_shell"
        android:layout_below="@id/view_bid_activity_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:background="@drawable/grey_rounded_border">

        <TextView
            android:id="@+id/view_bid_activity_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/view_bid_activity_bidder_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <TextView
            android:id="@+id/view_bid_activity_rate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

</RelativeLayout>
